--- a/styles/style.css
+++ b/styles/style.css
@@ -1,86 +1,70 @@
-.itc-accordion {
-    border-right: 1px solid rgb(0 0 0 / 12.5%);
-    border-bottom: 1px solid rgb(0 0 0 / 12.5%);
-    border-left: 1px solid rgb(0 0 0 / 12.5%);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
   
-  .itc-accordion-header {
+  *,
+  *::after,
+  *::before {
+    box-sizing: inherit;
+  }
+  
+  body {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    line-height: 1.2;
+    width: 100%;
+    min-height: 100vh;
+    background-color: rgb(232, 232, 255);
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem 1rem;
-    color: #212529;
-    border-top: 1px solid rgb(0 0 0 / 12.5%);
-    cursor: pointer;
-    transition: background-color 0.2s ease-out;
+    justify-content: center;
   }
   
-  .itc-accordion-header:hover {
-    background-color: #eee;
+  .container {
+    padding: 30px;
+    max-width: 800px;
   }
   
-  .itc-accordion-content .itc-accordion-header {
-    padding-left: 2rem;
-  }
-  
-  .itc-accordion-content .itc-accordion-content .itc-accordion-header {
-    padding-left: 3rem;
-  }
-  
-  .accordion > .itc-accordion-item > .itc-accordion-header {
-    font-weight: bold;
-    background-color: #fafafa;
-  }
-  
-  .accordion > .itc-accordion-item > .itc-accordion-header:hover {
-    background-color: #eee;
-  }
-  
-  .itc-accordion-header::after {
-    flex-shrink: 0;
-    width: 1.25rem;
-    height: 1.25rem;
-    margin-left: auto;
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-    background-repeat: no-repeat;
-    background-size: 1.25rem;
-    content: "";
-    transition: transform 0.2s ease-out;
-  }
-  
-  .itc-accordion-item-show > .itc-accordion-header::after,
-  .itc-accordion-item-slidedown > .itc-accordion-header::after {
-    transform: rotate(-180deg);
-  }
-  
-  .itc-accordion-content {
-    display: flex;
-    flex-direction: column;
-    background: #fff;
-  }
-  
-  .itc-accordion-content > a {
+  .container .box {
     position: relative;
-    display: block;
-    padding: 0.5rem 1rem 0.5rem 2rem;
-    color: #212529;
-    text-decoration: none;
-    background-color: #fff;
-    border-top: 1px solid rgb(0 0 0 / 12.5%);
+    margin-bottom: 20px;
   }
   
-  .itc-accordion-content .itc-accordion-content > a {
-    padding-left: 3rem;
+  .container .box:last-child {
+    margin-bottom: 0; 
   }
   
-  .itc-accordion-content .itc-accordion-content .itc-accordion-content > a {
-    padding-left: 4rem;
+  .container .box .label {
+    position: relative;
+    padding: 20px;
+    background-color: darkblue; 
+    color: #fff; 
+    cursor: pointer; 
   }
   
-  .itc-accordion-body .itc-accordion-content > a:hover {
-    background-color: #eee;
+  .container .box .label::after {
+    content: "+"; 
+    position: absolute;
+    top: 50%; 
+    transform: translateY(-50%);
+    right: 20px;
+    font-size: 25px;
+    font-weight: bold;
   }
   
-  .itc-accordion-item:not(.itc-accordion-item-show) > .itc-accordion-body {
-    display: none;
+  .container .box.active .label::after {
+    content: "\2014";
+  }
+  
+  .container .box .content {
+    position: relative;
+    background-color: #fff; 
+    overflow: hidden;
+    max-height: 0; 
+    transition: 0.3s; 
+  }
+  
+  .container .box .content p {
+    padding: 20px;
   }
